# mc-mcp

./: .gitignore  Cargo.toml  Config.toml  Makefile  README.md  amf.yaml  mcp_config.toml
.amf/knowledge/note/: config.md  project.md
.github/workflows/: ci.yml
mc-mcp-application/: Cargo.toml
mc-mcp-application/src/: lib.rs
mc-mcp-application/tests/: reference_service_integration_test.rs
mc-mcp-domain/: Cargo.toml
mc-mcp-domain/src/: lib.rs
mc-mcp-infrastructure/: Cargo.toml
mc-mcp-infrastructure/src/: lib.rs
mc-mcp-server/: Cargo.toml
mc-mcp-server/src/: main.rs
src/: config.rs  initialization.rs  lib.rs  main.rs
src/application/: mod.rs  reference_service.rs
src/domain/: mod.rs  reference.rs  vector_repository.rs
src/infrastructure/: docker.rs  embedding.rs  file_system.rs  markdown.rs  mod.rs  vector_db.rs
src/server/: handler.rs
tests/: vector_db_integration.rs
tests/integration/: main_integration_test.rs
tests/mock_bin/: forge
