[package]
name = "mc-mcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# From domain
serde = { version = "1.0", features = ["derive"] }
# From application
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
# From infrastructure
comrak = "0.24"
walkdir = "2"
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
# From server
rmcp = { version = "0.1", features = ["server", "transport-io"] }
# From workspace.dependencies (and used across crates)
tokio = { version = "1", features = ["full"] } # Merged features
serde_json = "1"
qdrant_client = { version = "1.13.0", package = "qdrant-client" }
uuid = { version = "1.10", features = ["v4"] } # Use the version from workspace.dependencies
tokio-util = "0.7.14"
# Add figment for configuration
figment = { version = "0.10", features = ["env", "toml"] }

[dev-dependencies]
# From application
tempfile = "3.10.1" # Keep specific version from application? Or use infra's "3"? Let's use 3.10.1 for now.
testcontainers = "0.23.3" # From workspace.dependencies
testcontainers-modules = "0.11.6"
tonic = "0.12"
# From infrastructure
# tempfile = "3" # Conflicting version, using 3.10.1 above
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Already covered by dependencies
# testcontainers = { workspace = true } # Already covered
serial_test = "2.0"
simple_logger = "5.0"
