[package]
name = "mc-mcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# From domain
serde = { version = "1.0", features = ["derive"] }
# From application
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
# From infrastructure
comrak = "0.24"
walkdir = "2"
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
# From server
rmcp = { version = "0.1.5", features = ["client", "server"] }
# From workspace.dependencies (and used across crates)
tokio = { version = "1", features = ["full"] } # Merged features
serde_json = "1"
qdrant_client = { version = "1.13.0", package = "qdrant-client" }
uuid = { version = "1.10", features = ["v4"] } # Use the version from workspace.dependencies
tokio-util = "0.7.14"
# Add figment for configuration
figment = { version = "0.10", features = ["env", "toml", "test"] }
# Added for the new features
downcast-rs = "1.2.1"
env_logger = "0.11.3"
# Required by src files, moved from dev-dependencies
testcontainers = { version = "0.23.3" }
testcontainers-modules = { version = "0.11.6" }
serial_test = "3.1.1"
mockall = "0.12"
flate2 = "1.1.1"

[dev-dependencies]
# From application
tempfile = "3.10.1" # Keep specific version from application? Or use infra's "3"? Let's use 3.10.1 for now.
# Use version 0.11.6 which is available on crates.io
# From infrastructure
# tempfile = "3" # Conflicting version, using 3.10.1 above
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Already covered by dependencies
# testcontainers = { workspace = true } # Moved to dependencies
simple_logger = "5.0"
assert_matches = "1.5.0"
wiremock = "0.6.1"
# testcontainers = { version = "0.23.3" } # Moved to dependencies
# testcontainers-modules = { version = "0.11.6" } # Moved to dependencies
tonic = "0.12"
# serial_test = "3.1.1" # Moved to dependencies
# mockall = "0.12" # Moved to dependencies

[build-dependencies]
# Add build dependencies if needed

[alias]
build-index = "run --bin build_index --"
