[package]
name = "mc-mcp"
version = "0.1.10"
edition = "2021"
authors = ["ea <ecdysis-xyz@proton.me>", "kai <kai.hiroi@pm.me>"]
description = "A Model Context Protocol (MCP) server for metacontract smart contract development."
license = "MIT OR Apache-2.0"
repository = "https://github.com/metacontract/mc-mcp"
homepage = "https://github.com/metacontract/mc-mcp"
documentation = "https://docs.rs/mc-mcp"
readme = "README.md"
keywords = ["smart-contract", "evm", "metacontract", "foundry", "mcp"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# From domain
serde = { version = "1.0", features = ["derive"] }
# From application
anyhow = "1.0.86"
log = "0.4.21"
async-trait = "0.1"
futures = "0.3.30"
# From infrastructure
comrak = "0.24.1"
walkdir = "2.5.0"
fastembed = { version = "4", default-features = false, features = [
  "hf-hub-rustls-tls",
  "ort-download-binaries",
] }
tar = "0.4.44"
# From server
rmcp = { version = "0.1.5", features = ["client", "server"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
qdrant_client = { version = "1.13.0", package = "qdrant-client" }
uuid = { version = "1.10", features = ["v4"] }
tokio-util = "0.7.14"
figment = { version = "0.10.19", features = ["toml", "env", "test"] }
downcast-rs = "1.2.1"
env_logger = "0.11.3"
directories = "5.0.1"
testcontainers = { version = "0.23.3" }
testcontainers-modules = { version = "0.11.6" }
serial_test = "3.1.1"
mockall = "0.12"
flate2 = "1.0.30"
reqwest = { version = "0.12.4", features = ["blocking", "json", "gzip"] }
ureq = "2"
tempfile = "3.10.1"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
# From application
tempfile = "3.10.1"
# From infrastructure
simple_logger = "5.0"
assert_matches = "1.5.0"
wiremock = "0.6.1"
tonic = "0.12"
testcontainers = "0.23"

[build-dependencies]
