[package]
name = "mc-mcp-application"
version = "0.1.0"
edition = "2021"

[dependencies]
mc-mcp-domain = { path = "../mc-mcp-domain" }
mc-mcp-infrastructure = { path = "../mc-mcp-infrastructure" }
anyhow = "1.0"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serde_json = "1"
qdrant-client = "1.13.0"
