[package]
name = "mc-mcp-application"
version = "0.1.0"
edition = "2021"

[dependencies]
mc-mcp-domain = { path = "../mc-mcp-domain" }
mc-mcp-infrastructure = { path = "../mc-mcp-infrastructure" }
anyhow = "1.0"
log = "0.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serde_json = { workspace = true }
qdrant_client = { workspace = true, package = "qdrant-client" }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
testcontainers = { workspace = true }
testcontainers-modules = "0.11.6"
tokio = { version = "1", features = ["full"] }
